--- a/asset/style/product.css
+++ b/asset/style/product.css
@@ -647,7 +647,8 @@ body {
 
 .product-image img {
   max-width: 100%;
-  max-height: 155px;
+  max-height: 140px;
+  min-height: 140px;
   height: auto;
 }
 
@@ -658,8 +659,7 @@ body {
 }
 
 .product-details h3 {
-
-  margin: 10px 2px !important;
+  margin: 2px 2px !important;
   font-size: 15px;
   font-weight: bold;
   text-transform: capitalize !important;
@@ -701,7 +701,6 @@ body {
 
 /* Wishlist inside price-buttons */
 .wishlist {
-  border: 1px solid #DE0085;
   background: none !important;
   border-radius: 6px;
   width: 36px;
