--- a/asset/style/popup.css
+++ b/asset/style/popup.css
@@ -417,7 +417,7 @@ body {
 }
 
 .toast-notification.success {
-    background-color: #28a745;
+    background-color: #9fbe1b;
 }
 
 .toast-notification.error {
