--- a/deatil.css
+++ b/deatil.css
@@ -76,7 +76,7 @@
 }
 
 .price-buttons1 .pay {
-  border: 1px solid #28a745;
+  border: 1px solid #9fbe1b;
   color: #9FBF1C;
   background: #28a7469a !important;
 }
@@ -362,7 +362,7 @@
 
 
 /* .discount-banner1 {
-  background-color: #28a745;
+  background-color: #9fbe1b;
   color: white;
   text-align: center;
   width: 10%;
