--- a/pop-page/pop.css
+++ b/pop-page/pop.css
@@ -77,7 +77,7 @@
 
 .check-btn {
   padding: 10px 16px;
-  background-color: #28a745;
+  background-color: #9fbe1b;
   color: #fff;
   font-size: 16px;
   border: none;
@@ -94,7 +94,7 @@
 
 .popup-btn button {
   padding: 10px 20px;
-  background: #28a745;;
+  background: #9fbe1b;;
   color: white;
   border: none;
   border-radius: 5px;
